--- a/index.html
+++ b/index.html
@@ -1,12 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>core_hw1</title>
+  </head>
+  <body>
+    <header class="main-hrader">
+      <nav class="main-nav">
+        <ul class="main-menu">
+          <li class="main-menu-item">
+            <a href="#lifestyle" class="main-menu-link">lifestyle</a>
+          </li>
+          <li class="main-menu-item">
+            <a href="#photodiary" class="main-menu-link">photodiary</a>
+          </li>
+          <li class="main-menu-item">
+            <a href="#" class="main-menu-link">music</a>
+          </li>
+          <li class="main-menu-item">
+            <a href="#" class="main-menu-link">travel</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main-content">
+        <section class="lifestyle" id="lifestyle">
+            <ul class="lifestyle-list">
+                <li class="lifestyle-list-item">
+                  <img
+                    src="img/homework-01.jpg"
+                    alt="картинка с девушкой"
+                    width="463"
+                    height="306"
+                  />
+                  <h4>lifestyle</h4>
+                  <h2>More than just a music festival</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere
+                    dolores quisquam rem asperiores placeat, fugit adipisci. Laudantium
+                    inventore a eos aspernatur est eligendi voluptatum temporibus
+                    officiis quia harum sequi officia fugiat, provident ratione beatae
+                    animi dicta aliquam amet rerum ipsum accusamus, sapiente repudiandae
+                    dolorem. Necessitatibus deserunt accusantium ipsum vel, accusamus
+                    debitis labore sunt dignissimos quae exercitationem modi quaerat
+                    veritatis, nihil obcaecati odio distinctio voluptatum neque eligendi
+                    aliquam culpa! Deleniti tempore commodi amet cum harum vel aliquam
+                    laboriosam inventore unde, facilis quas similique dolorem
+                    voluptatibus earum suscipit praesentium saepe rerum minus accusamus
+                    nostrum quam? Saepe corporis, deleniti dolore delectus natus minus!
+                  </p>
+                </li>
+                
+                <li class="lifestyle-list-item">
+                  <img
+                    src="img/homework-0111.jpg"
+                    alt="картинка c чашкой"
+                    width="414"
+                    height="318"
+                  />
+                  <h4>lifestyle</h4>
+                  <h2>Life tastes better with coffee</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere
+                    dolores quisquam rem asperiores placeat, fugit adipisci. Laudantium
+                    inventore a eos aspernatur est eligendi voluptatum temporibus
+                    officiis quia harum sequi officia fugiat, provident ratione beatae
+                    animi dicta aliquam amet rerum ipsum accusamus, sapiente repudiandae
+                    dolorem. Necessitatibus deserunt accusantium ipsum vel, accusamus
+                    debitis labore sunt dignissimos quae exercitationem modi quaerat
+                    veritatis, nihil obcaecati odio distinctio voluptatum neque eligendi
+                    aliquam culpa! Deleniti tempore commodi amet cum harum vel aliquam
+                    laboriosam inventore unde, facilis quas similique dolorem
+                    voluptatibus earum suscipit praesentium saepe rerum minus accusamus
+                    nostrum quam? Saepe corporis, deleniti dolore delectus natus minus!
+                  </p>
+                </li>
+              </ul>
+        </section>
+
+        <section class="photodiary" id="photodiary">
+            <ul class="photodiary-list">
+                <li class="photodiary-list-item">
+                  <img
+                    src="img/homework-011.jpg"
+                    alt="фото две девушки"
+                    width="485"
+                    height="315"
+                  />
+                  <h4>photodiary</h4>
+                  <h2>American dream</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere
+                    dolores quisquam rem asperiores placeat, fugit adipisci. Laudantium
+                    inventore a eos aspernatur est eligendi voluptatum temporibus
+                    officiis quia harum sequi officia fugiat, provident ratione beatae
+                    animi dicta aliquam amet rerum ipsum accusamus, sapiente repudiandae
+                    dolorem. Necessitatibus deserunt accusantium ipsum vel, accusamus
+                    debitis labore sunt dignissimos quae exercitationem modi quaerat
+                    veritatis, nihil obcaecati odio distinctio voluptatum neque eligendi
+                    aliquam culpa! Deleniti tempore commodi amet cum harum vel aliquam
+                    laboriosam inventore unde, facilis quas similique dolorem
+                    voluptatibus earum suscipit praesentium saepe rerum minus accusamus
+                    nostrum quam? Saepe corporis, deleniti dolore delectus natus minus!          
+                  </p>
+                </li>
+        
+                <li class="photodiary-list-item">
+                  <img
+                    src="img/homework-012.jpg"
+                    alt="фото девушка в шапке"
+                    width="415"
+                    height="292"
+                  />
+                  <h4>photodiary</h4>
+                  <h2>A day exploring the Alps</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere
+                    dolores quisquam rem asperiores placeat, fugit adipisci. Laudantium
+                    inventore a eos aspernatur est eligendi voluptatum temporibus
+                    officiis quia harum sequi officia fugiat, provident ratione beatae
+                    animi dicta aliquam amet rerum ipsum accusamus, sapiente repudiandae
+                    dolorem. Necessitatibus deserunt accusantium ipsum vel, accusamus
+                    debitis labore sunt dignissimos quae exercitationem modi quaerat
+                    veritatis, nihil obcaecati odio distinctio voluptatum neque eligendi
+                    aliquam culpa! Deleniti tempore commodi amet cum harum vel aliquam
+                    laboriosam inventore unde, facilis quas similique dolorem
+                    voluptatibus earum suscipit praesentium saepe rerum minus accusamus
+                    nostrum quam? Saepe corporis, deleniti dolore delectus natus minus!
+                  </p>
+                </li>
+              </ul>
+        </section>      
+    </main>
+    <button>load more</button>
+  </body>
 </html>
