--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.google.com/specimen/Roboto?query=roboto+#standard-styles"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto:wght@900&display=swap"
+      rel="stylesheet"    
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <header class="page-header conteiner">
+    <header class="page-header conteiner clearfix">
       <h1>
         <a href="" class="site-logo">Mart</a>
       </h1>
       <nav>
-        <ul class="site-navigation">
+        <ul class="site-navigation clearfix">
           <li>
             <a href="#">Home</a>
           </li>
@@ -47,15 +48,15 @@
 
     <main class="conteiner">
       <section class="featured-product">
-        <h2>Featured product</h2>
-        <ul class="featured-ptoduct-list">
+        <h2 class="featured-product">Featured product</h2>
+        <ul class="featured-ptoduct-list clearfix">
           <li class="featured-product-list-item">
             <a href="#">
-              <img
+              <img class="item-img"
                 src="img/sandals.png"
                 alt="sandals"
-                width="270"
-                height="253"
+                width="255"
+                height="285"
               />
             </a>
             <h3 class="name-item"><a href="#">Blue Tshirt</a></h3>
@@ -64,11 +65,11 @@
 
           <li class="featured-product-list-item">
             <a href="#">
-              <img
+              <img class="item-img"
                 src="img/brown belt.png"
                 alt="brown belt"
-                width="207"
-                height="117"
+                width="255"
+                height="285"
               />
             </a>
             <h3 class="name-item"><a href="#">Woman Shirt</a></h3>
@@ -77,19 +78,19 @@
 
           <li class="featured-product-list-item">
             <a href="#">
-              <img src="img/hat.png" alt="hat" width="229" height="158" />
+              <img class="item-img" src="img/hat.png" alt="hat" width="255" height="285" />
             </a>
             <h3 class="name-item"><a href="#">Yellow Tshirt</a></h3>
-            <span class="price-item"></span>
+            <span class="price-item">21$</span>
           </li>
 
           <li class="featured-product-list-item">
             <a href="#">
-              <img
+              <img class="item-img"
                 src="img/blue bag.png"
                 alt="blue bag"
-                width="219"
-                height="186"
+                width="255"
+                height="285"
               />
             </a>
             <h3 class="name-item"><a href="#">Cool Lingeria</a></h3>
@@ -98,11 +99,11 @@
 
           <li class="featured-product-list-item">
             <a href="#">
-              <img
+              <img class="item-img"
                 src="img/black bag.png"
                 alt="black bag"
-                height="198"
-                width="213"
+                height="285"
+                width="255"
               />
             </a>
             <h3 class="name-item"><a href="#">Blue Tshirt</a></h3>
@@ -111,11 +112,11 @@
 
           <li class="featured-product-list-item">
             <a href="#">
-              <img
+              <img class="item-img"
                 src="img/black belt.png"
                 alt="shoes"
-                width="260"
-                height="180"
+                width="255"
+                height="285"
               />
             </a>
             <h3 class="name-item"><a href="#">Woman Shirt</a></h3>
@@ -124,87 +125,74 @@
 
           <li class="featured-product-list-item">
             <a href="#">
-              <img src="img/shoes.png" alt="shoes" width="171" height="270" />
+              <img class="item-img" src="img/shoes.png" alt="shoes" width="255" height="285" />
             </a>
             <h3 class="name-item"><a href="#">Yellow Tshirt</a></h3>
             <span class="price-item">21$</span>
           </li>
 
           <li class="featured-product-list-item">
-            a
             <a href="#">
-              <img
+              <img class="item-img max-width-img"
                 src="img/glasses.png"
                 alt="glasses"
-                width="234"
-                height="98"
+                width="255"
+                height="285"
               />
             </a>
             <h3 class="name-item"><a href="#">Yellow Tshirt</a></h3>
             <span class="price-item">21$</span>
           </li>
         </ul>
+      </section>
 
-        <section class="latest new">
-          <h2>Latest New</h2>
-          <ul class="latest-new-list">
-            <li class="latest-new-list-item">
-              <img
-                src="img/nav.jpg"
-                alt="navigation"
-                width="350"
-                height="262"
-              />
-              <h3>
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </h3>
-              <p>
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt auctor a ornare
-              </p>
-              <button class="button">Read more</button>
-            </li>
+      <section class="latest-new">
+        <h2 class="latest-new">Latest New</h2>
+        <ul class="latest-new-list clearfix">
+          <li class="latest-new-list-item">
+            <img src="img/nav.jpg" alt="navigation" width="350" height="262" />
+            <h3 class="latest-new-item-name">
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </h3>
+            <p class="latest-new-item-text">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio tincidunt auctor a ornare
+            </p>
+            <button class="button">Read more</button>
+          </li>
 
-            <li class="latest-new-list-item">
-              <img
-                src="img/two girls.jpg"
-                alt="two girls"
-                width="347"
-                height="261"
-              />
-              <h3>
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </h3>
-              <p>
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt auctor a ornare
-              </p>
-              <button class="button">Read more</button>
-            </li>
+          <li class="latest-new-list-item">
+            <img 
+              src="img/two girls.jpg"
+              alt="two girls"
+              width="347"
+              height="261"
+            />
+            <h3 class="latest-new-item-name">
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </h3>
+            <p>
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio tincidunt auctor a ornare
+            </p>
+            <button class="button">Read more</button>
+          </li>
 
-            <li class="latest-new-list-item">
-              <img
-                src="img/nav.jpg"
-                alt="navigation"
-                width="350"
-                height="262"
-              />
-              <h3>
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </h3>
-              <p>
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt auctor a ornare
-              </p>
-              <button class="button">Read more</button>
-            </li>
-          </ul>
-        </section>
-
-        
+          <li class="latest-new-list-item">
+            <img src="img/bus.jpg" alt="bus" width="347" height="262" />
+            <h3 class="latest-new-item-name">
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </h3>
+            <p>
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio tincidunt auctor a ornare
+            </p>
+            <button class="button">Read more</button>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
