--- a/index.html
+++ b/index.html
@@ -12,188 +12,145 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto:wght@900&display=swap"
-      rel="stylesheet"    
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <header class="page-header conteiner clearfix">
-      <h1>
-        <a href="" class="site-logo">Mart</a>
-      </h1>
-      <nav>
-        <ul class="site-navigation clearfix">
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">About us</a>
-          </li>
-          <li>
-            <a href="#">Page</a>
-          </li>
-          <li>
-            <a href="#">Shop</a>
-          </li>
-          <li>
-            <a href="#">Blog</a>
-          </li>
-          <li>
-            <a href="#">Contact us</a>
-          </li>
-        </ul>
-      </nav>
+    <header>
+      <div class="page-header conteiner clearfix">
+        <h1>
+          <a href="" class="site-logo">Mart</a>
+        </h1>
+        <nav>
+          <ul class="site-navigation clearfix">
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About us</a>
+            </li>
+            <li>
+              <a href="#">Page</a>
+            </li>
+            <li>
+              <a href="#">Shop</a>
+            </li>
+            <li>
+              <a href="#">Blog</a>
+            </li>
+            <li>
+              <a href="#">Contact us</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
-    <main class="conteiner">
-      <section class="featured-product">
-        <h2 class="featured-product">Featured product</h2>
-        <ul class="featured-ptoduct-list clearfix">
-          <li class="featured-product-list-item">
-            <a href="#">
-              <img class="item-img"
-                src="img/sandals.png"
-                alt="sandals"
+    <main>
+      <div class="slide clearfix">
+        <button class="btn-left">&#8249</button>
+        <div class="slide-title">
+          <p class="slide-name">Affordable Paris Tours</p>
+          <p class="slide-pos">City Tours / Tour Tickets / Tour Guide</p>
+        </div>
+        <button class="btn-right">&#8250</button>
+
+        <div class="slide-img">
+          <img
+            src="/img/модуль 5/slide4.jpg"
+            alt="girls"
+            width="1600"
+            height="600"
+          />
+        </div>
+      </div>
+
+      <section class="new-collection">
+        <div class="conteiner">
+          <div class="name-new-collection">
+            <h2>New Collection</h2>
+          </div>
+          <ul class="new-collection-list clearfix">
+            <li>
+              <div class="new-collection-card">
+                <div class="overlay-btn">
+                  <div class="overlay-btn-top clearfix">
+                    <button class="btn">&#x2661</button>
+                    <button class="btn">&#10536</button>
+                    <button class="btn">&#9990</button>
+                  </div>
+                  <div class="overlay-btn-bottom">
+                    <button class="btn">Add to card</button>
+                  </div>
+                </div>  
+                <img
+                  class="new-collection-img"
+                  src="/img/модуль 5/category-2.jpg"
+                  alt="boy in a blue"
+                  width="255"
+                  height="322"
+                />
+              </div>
+
+              <div class="category-price-item clearfix">
+                <h3 class="category-item"><a href="#">Blue Tshirt</a></h3>
+                <p class="price-item">$26</p>
+              </div>
+            </li>
+
+            <li>
+              <img
+                class="new-collection-img"
+                src="/img/модуль 5/category-1.jpg"
+                alt="girl in pink"
                 width="255"
-                height="285"
+                height="322"
               />
-            </a>
-            <h3 class="name-item"><a href="#">Blue Tshirt</a></h3>
-            <span class="price-item">26$</span>
-          </li>
+              <div class="category-price-item clearfix">
+                <h3 class="category-item"><a href="#">Woman shirt</a></h3>
+                <p class="price-item">$31</p>
+              </div>
+            </li>
 
-          <li class="featured-product-list-item">
-            <a href="#">
-              <img class="item-img"
-                src="img/brown belt.png"
-                alt="brown belt"
+            <li>
+              <img
+                class="new-collection-img"
+                src="/img/модуль 5/category-4.jpg"
+                alt="boy in yellow"
                 width="255"
-                height="285"
+                height="322"
               />
-            </a>
-            <h3 class="name-item"><a href="#">Woman Shirt</a></h3>
-            <span class="price-item">31$</span>
-          </li>
+              <div class="category-price-item clearfix">
+                <h3 class="category-item"><a href="#">Yellow tshirt</a></h3>
+                <p class="price-item">$21</p>
+              </div>
+            </li>
 
-          <li class="featured-product-list-item">
-            <a href="#">
-              <img class="item-img" src="img/hat.png" alt="hat" width="255" height="285" />
-            </a>
-            <h3 class="name-item"><a href="#">Yellow Tshirt</a></h3>
-            <span class="price-item">21$</span>
-          </li>
-
-          <li class="featured-product-list-item">
-            <a href="#">
-              <img class="item-img"
-                src="img/blue bag.png"
-                alt="blue bag"
+            <li>
+              <img
+                class="new-collection-img"
+                src="/img/модуль 5/category-3.jpg"
+                alt="girl in purple"
                 width="255"
-                height="285"
+                height="322"
               />
-            </a>
-            <h3 class="name-item"><a href="#">Cool Lingeria</a></h3>
-            <span class="price-item">56$</span>
-          </li>
-
-          <li class="featured-product-list-item">
-            <a href="#">
-              <img class="item-img"
-                src="img/black bag.png"
-                alt="black bag"
-                height="285"
-                width="255"
-              />
-            </a>
-            <h3 class="name-item"><a href="#">Blue Tshirt</a></h3>
-            <span class="price-item">26$</span>
-          </li>
-
-          <li class="featured-product-list-item">
-            <a href="#">
-              <img class="item-img"
-                src="img/black belt.png"
-                alt="shoes"
-                width="255"
-                height="285"
-              />
-            </a>
-            <h3 class="name-item"><a href="#">Woman Shirt</a></h3>
-            <span class="price-item">31$</span>
-          </li>
-
-          <li class="featured-product-list-item">
-            <a href="#">
-              <img class="item-img" src="img/shoes.png" alt="shoes" width="255" height="285" />
-            </a>
-            <h3 class="name-item"><a href="#">Yellow Tshirt</a></h3>
-            <span class="price-item">21$</span>
-          </li>
-
-          <li class="featured-product-list-item">
-            <a href="#">
-              <img class="item-img max-width-img"
-                src="img/glasses.png"
-                alt="glasses"
-                width="255"
-                height="285"
-              />
-            </a>
-            <h3 class="name-item"><a href="#">Yellow Tshirt</a></h3>
-            <span class="price-item">21$</span>
-          </li>
-        </ul>
-      </section>
-
-      <section class="latest-new">
-        <h2 class="latest-new">Latest New</h2>
-        <ul class="latest-new-list clearfix">
-          <li class="latest-new-list-item">
-            <img src="img/nav.jpg" alt="navigation" width="350" height="262" />
-            <h3 class="latest-new-item-name">
-              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-            </h3>
-            <p class="latest-new-item-text">
-              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-              Nam nec tellus a odio tincidunt auctor a ornare
-            </p>
-            <button class="button">Read more</button>
-          </li>
-
-          <li class="latest-new-list-item">
-            <img 
-              src="img/two girls.jpg"
-              alt="two girls"
-              width="347"
-              height="261"
-            />
-            <h3 class="latest-new-item-name">
-              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-            </h3>
-            <p>
-              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-              Nam nec tellus a odio tincidunt auctor a ornare
-            </p>
-            <button class="button">Read more</button>
-          </li>
-
-          <li class="latest-new-list-item">
-            <img src="img/bus.jpg" alt="bus" width="347" height="262" />
-            <h3 class="latest-new-item-name">
-              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-            </h3>
-            <p>
-              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-              Nam nec tellus a odio tincidunt auctor a ornare
-            </p>
-            <button class="button">Read more</button>
-          </li>
-        </ul>
+              <div class="category-price-item clearfix">
+                <h3 class="category-item"><a href="#">Cool lingerie</a></h3>
+                <p class="price-item">$56</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+
+    <footer class="footer">      
+        <p class="footer-title">
+          All Rights Reserved &#169; Dokan &#124; Designec
+          <a href="#">ThemenGraph</a>
+        </p>      
+    </footer>
   </body>
 </html>
