edited by slider  button

--- a/index.html
+++ b/index.html
@@ -49,17 +49,23 @@
     </header>
 
     <main>
-      <div class="slide clearfix">
-        <button class="btn-left">&#8249</button>
+      <div class="slide clearfix">        
         <div class="slide-title">
           <p class="slide-name">Affordable Paris Tours</p>
           <p class="slide-pos">City Tours / Tour Tickets / Tour Guide</p>
         </div>
-        <button class="btn-right">&#8250</button>
+        <div class="button-arrow">
+          <button class="btn-left">
+            <span class="icon-arrow-left"></span>
+          </button>
+          <button class="btn-right">
+            <span class="icon-arrow-right"></span>
+          </button>
+        </div>        
 
         <div class="slide-img">
           <img
-            src="/img/модуль 5/slide4.jpg"
+            src="/img/module_5/slide4.jpg"
             alt="girls"
             width="1600"
             height="600"
@@ -77,9 +83,9 @@
               <div class="new-collection-card">
                 <div class="overlay-btn">
                   <div class="overlay-btn-top clearfix">
-                    <button class="btn">&#x2661</button>
-                    <button class="btn">&#10536</button>
-                    <button class="btn">&#9990</button>
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+                    <button class="btn"></button>
                   </div>
                   <div class="overlay-btn-bottom">
                     <button class="btn">Add to card</button>
@@ -87,7 +93,7 @@
                 </div>  
                 <img
                   class="new-collection-img"
-                  src="/img/модуль 5/category-2.jpg"
+                  src="/img/module_5/category-2.jpg"
                   alt="boy in a blue"
                   width="255"
                   height="322"
@@ -103,7 +109,7 @@
             <li>
               <img
                 class="new-collection-img"
-                src="/img/модуль 5/category-1.jpg"
+                src="/img/module_5/category-1.jpg"
                 alt="girl in pink"
                 width="255"
                 height="322"
@@ -117,7 +123,7 @@
             <li>
               <img
                 class="new-collection-img"
-                src="/img/модуль 5/category-4.jpg"
+                src="/img/module_5/category-4.jpg"
                 alt="boy in yellow"
                 width="255"
                 height="322"
@@ -131,7 +137,7 @@
             <li>
               <img
                 class="new-collection-img"
-                src="/img/модуль 5/category-3.jpg"
+                src="/img/module_5/category-3.jpg"
                 alt="girl in purple"
                 width="255"
                 height="322"
