--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
 
     <main>
-      <div class="slide clearfix">        
+      <div class="slide clearfix">
         <div class="slide-title">
           <p class="slide-name">Affordable Paris Tours</p>
           <p class="slide-pos">City Tours / Tour Tickets / Tour Guide</p>
@@ -61,7 +61,7 @@
           <button class="btn-right">
             <span class="icon-arrow-right"></span>
           </button>
-        </div>        
+        </div>
 
         <div class="slide-img">
           <img
@@ -74,39 +74,54 @@
       </div>
 
       <section class="new-collection">
-        <div class="conteiner">
-          <div class="name-new-collection">
-            <h2>New Collection</h2>
-          </div>
-          <ul class="new-collection-list clearfix">
-            <li>
-              <div class="new-collection-card">
-                <div class="overlay-btn">
+        <div class="name-new-collection">
+          <h2>New Collection</h2>
+        </div>
+        <ul class="new-collection-list clearfix">
+          <li>
+            <div class="new-collection-card">
+              <div class="overlay-btn">
+                <div class="btn-block">
                   <div class="overlay-btn-top clearfix">
                     <button class="btn"></button>
                     <button class="btn"></button>
                     <button class="btn"></button>
                   </div>
-                  <div class="overlay-btn-bottom">
-                    <button class="btn">Add to card</button>
-                  </div>
-                </div>  
-                <img
-                  class="new-collection-img"
-                  src="/img/module_5/category-2.jpg"
-                  alt="boy in a blue"
-                  width="255"
-                  height="322"
-                />
-              </div>
 
+                  <div class="overlay-btn-bottom">
+                    <button class="btn-bottom">Add to card</button>
+                  </div>
+                </div>
+              </div>
+              <img
+                class="new-collection-img"
+                src="/img/module_5/category-2.jpg"
+                alt="boy in a blue"
+                width="255"
+                height="322"
+              />
               <div class="category-price-item clearfix">
                 <h3 class="category-item"><a href="#">Blue Tshirt</a></h3>
                 <p class="price-item">$26</p>
               </div>
-            </li>
+            </div>
+          </li>
 
-            <li>
+          <li>
+            <div class="new-collection-card">
+              <div class="overlay-btn">
+                <div class="btn-block">
+                  <div class="overlay-btn-top clearfix">
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+                  </div>
+
+                  <div class="overlay-btn-bottom">
+                    <button class="btn-bottom">Add to card</button>
+                  </div>
+                </div>
+              </div>
               <img
                 class="new-collection-img"
                 src="/img/module_5/category-1.jpg"
@@ -118,9 +133,24 @@
                 <h3 class="category-item"><a href="#">Woman shirt</a></h3>
                 <p class="price-item">$31</p>
               </div>
-            </li>
+            </div>
+          </li>
 
-            <li>
+          <li>
+            <div class="new-collection-card">
+              <div class="overlay-btn">
+                <div class="btn-block">
+                  <div class="overlay-btn-top clearfix">
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+                  </div>
+
+                  <div class="overlay-btn-bottom">
+                    <button class="btn-bottom">Add to card</button>
+                  </div>
+                </div>
+              </div>
               <img
                 class="new-collection-img"
                 src="/img/module_5/category-4.jpg"
@@ -132,9 +162,24 @@
                 <h3 class="category-item"><a href="#">Yellow tshirt</a></h3>
                 <p class="price-item">$21</p>
               </div>
-            </li>
+            </div>
+          </li>
 
-            <li>
+          <li>
+            <div class="new-collection-card">
+              <div class="overlay-btn">
+                <div class="btn-block">
+                  <div class="overlay-btn-top clearfix">
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+                  </div>
+
+                  <div class="overlay-btn-bottom">
+                    <button class="btn-bottom">Add to card</button>
+                  </div>
+                </div>
+              </div>
               <img
                 class="new-collection-img"
                 src="/img/module_5/category-3.jpg"
@@ -146,17 +191,17 @@
                 <h3 class="category-item"><a href="#">Cool lingerie</a></h3>
                 <p class="price-item">$56</p>
               </div>
-            </li>
-          </ul>
-        </div>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
 
-    <footer class="footer">      
-        <p class="footer-title">
-          All Rights Reserved &#169; Dokan &#124; Designec
-          <a href="#">ThemenGraph</a>
-        </p>      
+    <footer class="footer">
+      <p class="footer-title">
+        All Rights Reserved &#169; Dokan &#124; Designec
+        <a href="#">ThemenGraph</a>
+      </p>
     </footer>
   </body>
 </html>
